src/snapshots/hello_mlir__typechecker__tests__duplicate_function_declaration.snap
---
source: src/typechecker.rs
expression: result
---
Err:
  kind:
    DuplicateFunctionDeclaration:
      name: add
  file_id: "<test>"
  span:
    start: 35
    end: 68
    context: ~
