src/snapshots/hello_mlir__typechecker__tests__duplicate_variable_declaration.snap
---
source: src/typechecker.rs
expression: result
---
Err:
  kind:
    DuplicateVariableDeclaration:
      name: x
  file_id: "<test>"
  span:
    start: 44
    end: 60
    context: ~
