src/snapshots/hello_mlir__typechecker__tests__function_not_found.snap
---
source: src/typechecker.rs
expression: result
---
Err:
  kind:
    FunctionNotFound:
      name: one
  file_id: "<test>"
  span:
    start: 36
    end: 41
    context: ~
