src/snapshots/hello_mlir__typechecker__tests__invalid_operation.snap
---
source: src/typechecker.rs
expression: result
---
Err:
  kind:
    MismatchedTypes:
      left: I32
      right: Bool
  file_id: "<test>"
  span:
    start: 0
    end: 8
    context: ~
