src/snapshots/hello_mlir__typechecker__tests__mismatched_types.snap
---
source: src/typechecker.rs
expression: result
---
Err:
  kind:
    MismatchedTypes:
      left: Bool
      right: I32
  file_id: "<test>"
  span:
    start: 23
    end: 41
    context: ~
