src/snapshots/hello_mlir__typechecker__tests__variable_not_found.snap
---
source: src/typechecker.rs
expression: result
---
Err:
  kind:
    VariableNotFound:
      name: y
  file_id: "<test>"
  span:
    start: 44
    end: 45
    context: ~
